force-app/main/default/objects/Logging__c/fields/DISABLE_AFTERSHIP__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_AFTERSHIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_AFTERSHIP</label>
    <type>Checkbox</type>
</CustomField>