force-app/main/default/objects/Logging__c/fields/DISABLE_BATCH__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_BATCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_BATCH</label>
    <type>Checkbox</type>
</CustomField>