force-app/main/default/objects/Logging__c/fields/DISABLE_CUSTOMER_DATA__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_CUSTOMER_DATA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_CUSTOMER_DATA</label>
    <type>Checkbox</type>
</CustomField>