force-app/main/default/objects/Logging__c/fields/DISABLE_DEBT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_DEBT_STATUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_DEBT_STATUS</label>
    <type>Checkbox</type>
</CustomField>