force-app/main/default/objects/Logging__c/fields/DISABLE_LOGGING__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_LOGGING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_LOGGING</label>
    <type>Checkbox</type>
</CustomField>