force-app/main/default/objects/Logging__c/fields/DISABLE_MIDAS_SELFBOOKING__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_MIDAS_SELFBOOKING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISABLE_MIDAS_SELFBOOKING</label>
    <type>Checkbox</type>
</CustomField>