force-app/main/default/objects/Logging__c/fields/DISABLE_PostChatSurveys__c.field-meta.xml
<CustomField>
    <fullName>DISABLE_PostChatSurveys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PostChatSurveys for CC</description>
    <label>DISABLE_PostChatSurveys</label>
    <type>Checkbox</type>
</CustomField>