force-app/main/default/objects/Logging__c/fields/NUMBER_OF_DAYS__c.field-meta.xml
<CustomField>
    <fullName>NUMBER_OF_DAYS__c</fullName>
    <label>NUMBER_OF_DAYS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>