force-app/main/default/objects/Logging__c/fields/ONLY_ERROR_LOGGING__c.field-meta.xml
<CustomField>
    <fullName>ONLY_ERROR_LOGGING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ONLY_ERROR_LOGGING</label>
    <type>Checkbox</type>
</CustomField>